src/styles/components/_select.scss
@use "../abstracts/variables" as *;

.select__item {
  line-height: 1;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 1.5rem;
  padding: 0 1rem;
  position: relative;
  user-select: none;
  outline: none;

  &[data-disabled] {
    color: hsl(240 5% 65%);
    opacity: 0.5;
    pointer-events: none;
  }

  &[data-highlighted] {
    outline: none;
    background-color: var(--scale-500);
    color: white;
  }
}

.select__item-indicator {
  height: 20px;
  width: 20px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.select__trigger {
  display: inline-flex;
  align-items: center;
  justify-content: space-between;
  padding: 2rem;
  line-height: 1;
  outline: none;
  border-left: $border;
  transition:
    border-color 250ms,
    color 250ms;
  max-width: 360px;
  cursor: pointer;

  &:hover {
    background-color: var(--scale-700);
  }

  &:focus-visible {
    outline: 2px solid var(--scale-200);
    outline-offset: 2px;
  }

  &[data-invalid] {
    border-color: hsl(0 72% 51%);
    color: hsl(0 72% 51%);
  }
}

.select__value {
  display: flex;
  align-items: center;
  gap: 8px;
  flex-grow: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding: 4px 0;
  overflow: hidden;

  &[data-placeholder-shown] {
    color: var(--scale-500);
  }
}

.select__selected-value-container {
  display: flex;
  align-items: center;
  gap: 0.75rem;
  flex-wrap: wrap;
}

.select__selected-value {
  background-color: var(--color);
  font-size: 0.8rem;
  padding: 0.5rem 0.75rem;
  display: inline-flex;
  align-items: center;
}

.select__icon {
  height: 20px;
  width: 20px;
  flex: 0 0 20px;
}

.select__description {
  margin-top: 8px;
  color: hsl(240 5% 26%);
  font-size: 12px;
  user-select: none;
}

.select__message--error {
  margin-top: 8px;
  color: hsl(0 72% 51%);
  font-size: 12px;
  user-select: none;
}

.select__content {
  background-color: var(--background);
  border: 1px solid var(--border);
  box-shadow:
    0 4px 6px -1px rgb(0 0 0 / 0.1),
    0 2px 4px -2px rgb(0 0 0 / 0.1);
  transform-origin: var(--kb-select-content-transform-origin);
  animation: contentHide 100ms ease-in forwards;
  width: 200px;

  &[data-expanded] {
    animation: contentShow 100ms ease-out;
  }
}

.select__listbox {
  overflow-y: auto;
  max-height: 360px;
  padding: 8px;
}

// Select animation
@keyframes contentShow {
  from {
    opacity: 0;
    transform: translateY(-8px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes contentHide {
  from {
    opacity: 1;
    transform: translateY(0);
  }

  to {
    opacity: 0;
    transform: translateY(-8px);
  }
}

